--- a/style.css
+++ b/style.css
@@ -1,7 +1,144 @@
-
+@import url('https://fonts.googleapis.com/css2?family=Asap:wght@400;500;700&display=swap');
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
 
 body {
- background-color:pink ;
+  background-color: lightgray;
 }
+
+header {
+  background-color: black;
+  padding: 20px;
+  margin-bottom: 10px;
+}
+
+header > h1 {
+  color: white;
+  text-shadow: 5px 5px 10px grey;
+  font-family: Asap sans-serif;
+  font-size: 50px;
+  font-weight: bold;
+  text-align: center;
+}
+
+.score-container {
+  background-color: black;
+  box-shadow: 0px 0px 10px;
+  border-radius: 10px;
+  padding: 0px;
+  margin: 20px;
+}
+
+.score-board {
+  margin: 20px auto;
+  text-align: center;
+  text-shadow: 0px 0px 10px grey;
+  Justify-content: center;
+  color: white;
+  border: none;
+  font-size: 70px;
+  font-weight: bold;
+  padding: 15px;
+  font-family: Asap sans-serif;
+  position: relative;
+}
+
+.badge {
+  background-color: slategray;
+  color: white;
+  border-radius: 5px;
+  font-family: Asap sans-serif;
+  font-size: 20px;
+  font-weight: 500;
+}
+
+#user-label {
+ position: absolute;
+ padding: 5px 20px;
+ top: 50px;
+ left: 200px;
+}
+
+#computer-label {
+  position: absolute;
+  padding: 5px 20px;
+  top: 50px;
+  right: 200px;
+}
+
+.result {
+  color: white;
+  text-align: center;
+  font-family: Asap sans-serif;
+  font-size: 30px;
+  font-weight: bold;
+}
+
+.choices {
+  margin: 30px 0;
+  text-align: center;
+}
+
+.choice {
+  border: 4px solid white;
+  border-radius: 5px;
+  display: inline-block;
+  margin: 0 20px;
+  padding: 10px;
+  background-color: lightslategray;
+}
+
+.choice > button {
+  background-color: lightslategray;
+  border: none;  
+}
+
+.choice:hover {
+  cursor: pointer;
+  transition: 0.3s ease;
+}
+
+#action-message {
+  color: lightslategray;
+  font-size: 20px;
+  font-weight: bold;
+  padding-bottom: 5px;
+  font-family: Asap sans-serif;
+  text-align: center;
+}
+
+div.score-container {
+  text-align: center;
+}
+
+ #refresh {
+  background-color: lightslategray;
+  color: white;
+  border: 2px solid white;
+  border-radius: 4px;
+  margin: auto;
+  margin-bottom: 10px;
+  padding: 5px 10px;  
+}
+
+
+.green-glow {
+  border: 4px solid #4dcc7d;
+  box-shadow: 0 0 10px #31b43a;
+}
+
+.red-glow {
+  border: 4px solid #fc121b;
+  box-shadow: 0 0 10px #d01115;
+}
+
+.gray-glow {
+  border: 4px solid #464647;
+  box-shadow: 0 0 10px #25292b;
+}
+
 
    
